infra/minikube-dev-gcp/ingress-old-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-fail-timeout: "1200"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $http_origin "${scheme}://${host}";
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
spec:
  ingressClassName: nginx
  rules:
    - host: auth.uniplanet.xyz
      http:
        paths:
          - path: /api/auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
    - host: products.uniplanet.xyz
      http:
        paths:
          - path: /api/products/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv
                port:
                  number: 3001
    - host: account.uniplanet.xyz
      http:
        paths:
          - path: /api/account/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-srv
                port:
                  number: 3002
    - host: chat.uniplanet.xyz
      http:
        paths:
          - path: /api/chat/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-srv
                port:
                  number: 3003
    - host: message.uniplanet.xyz
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: message-srv
                port:
                  number: 3004
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    cloud.google.com/neg: '{"exposed_ports": {"80":{"name": "ingress-nginx-80-neg"}}}'
  labels:
    helm.sh/chart: ingress-nginx-4.0.15
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.1.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
# ---
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: managed-cert-for-ingress
# spec:
#   domains:
#     - www.uniplanet.xyz
#     - auth.uniplanet.xyz
#     - products.uniplanet.xyz
#     - account.uniplanet.xyz
#     - chat.uniplanet.xyz
#     - message.uniplanet.xyz
